Wed Nov 25 19:32:25 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_instance_method_unimpl): Do not
	  call rb_inspect() on an object that does not implement necessary
	  methods; reported by NaHi.

Wed Nov 25 15:06:42 2009  Akinori MUSHA  <knu@iDaemons.org>

	* test/ruby/test_array.rb (TestArray#test_splat): Add tests for a
	  recently introduced bug in array splatting.

Tue Nov 24 16:18:35 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/md5.rb, ext/digest/lib/sha1.rb: Add an
	  obsoleteness warning under -w/-v.

Mon Nov 23 23:59:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_method_missing): adjusted format and argument number.

	* eval.c (rb_call): fixed for super in cached method.
	  [ruby-dev:39757]

Mon Nov 23 11:26:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): removed duplication.

	* dln.c (dln_find_1): not use prototype definition.

Thu Nov 19 23:22:40 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (putbinaryfile): use APPE for resume.
	  Thanks, Tomoyuki Chikanaga.

Thu Nov 19 22:34:49 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (flag_list): untaint strings to intern in the safe
	  level 1.

	* lib/net/imap.rb (max_flag_count=): new methods to set the max
	  number of flags interned to symbols.

Thu Nov 19 17:14:04 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub: nmake executes the file named echo if it exists
	  in the PATH.  reported by Kenta Murata <mrkn AT mrkn.jp> via IRC.

Sat Nov 14 17:09:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-opt-dir): ignore and suppress a warning.
	  [ruby-dev:39684]

Sat Nov 14 16:43:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (ruby_setenv): get rid of crash in Solaris 8 and 10.
	  [ruby-core:26668]

Sat Nov 14 04:07:06 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb (TkVariable::coerce): fix bug on a
	  numeric value.
