@@ -1,3 +1,8 @@
+Thu Nov 26 00:01:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
+
+	* test/digest/test_digest_extend.rb: Added tests for current digest
+	  framework.
+
 Wed Nov 25 19:32:25 2009  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ext/digest/digest.c (rb_digest_instance_method_unimpl): Do not
